--- a/NaivyBeatsApi/NaivyBeatsApi.csproj
+++ b/NaivyBeatsApi/NaivyBeatsApi.csproj
@@ -217,6 +217,9 @@
     <Compile Include="Models\Offer_In.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Offer_in_Styles.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Publication.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
